// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomerSatisfaction should check hover and unhover 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from, 10%, 40%, 80%, to {
    -webkit-transform: translate3d(0, 0, 0);
    -moz-transform: translate3d(0, 0, 0);
    -ms-transform: translate3d(0, 0, 0);
    transform: translate3d(0, 0, 0);
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  30% {
    -webkit-transform: translate3d(0, 5px, 0);
    -moz-transform: translate3d(0, 5px, 0);
    -ms-transform: translate3d(0, 5px, 0);
    transform: translate3d(0, 5px, 0);
    -webkit-transform: rotate(5deg);
    -moz-transform: rotate(5deg);
    -ms-transform: rotate(5deg);
    transform: rotate(5deg);
  }

  60% {
    -webkit-transform: translate3d(0, -6px, 0);
    -moz-transform: translate3d(0, -6px, 0);
    -ms-transform: translate3d(0, -6px, 0);
    transform: translate3d(0, -6px, 0);
  }

  90% {
    -webkit-transform: translate3d(0, -2px, 0);
    -moz-transform: translate3d(0, -2px, 0);
    -ms-transform: translate3d(0, -2px, 0);
    transform: translate3d(0, -2px, 0);
  }
}

.css-1cjs2t5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-pal2x8-Image-scaled {
  height: 88px;
  width: 88px;
  cursor: pointer;
  -webkit-transition: -webkit-transform 1s cubic-bezier(0.19, 1, 0.22, 1);
  transition: transform 1s cubic-bezier(0.19, 1, 0.22, 1);
}

.css-pal2x8-Image-scaled:hover,
.css-pal2x8-Image-scaled:focus {
  -webkit-transform: scale(1.2);
  -moz-transform: scale(1.2);
  -ms-transform: scale(1.2);
  transform: scale(1.2);
}

.css-137fro5-Image-scaled-Image {
  height: 88px;
  width: 88px;
  cursor: pointer;
  -webkit-transition: -webkit-transform 1s cubic-bezier(0.19, 1, 0.22, 1);
  transition: transform 1s cubic-bezier(0.19, 1, 0.22, 1);
  -webkit-animation: animation-0 1s ease infinite;
  animation: animation-0 1s ease infinite;
}

.css-137fro5-Image-scaled-Image:hover,
.css-137fro5-Image-scaled-Image:focus {
  -webkit-transform: scale(1.2);
  -moz-transform: scale(1.2);
  -ms-transform: scale(1.2);
  transform: scale(1.2);
}

<div
    class="css-1cjs2t5 ehpbis70"
    data-testid="customer-satisfaction"
  >
    <img
      class="css-pal2x8-Image-scaled epmg9lb0"
      data-testid="customer-satisfaction-1"
      src="test-file-stub"
    />
    <img
      class="css-pal2x8-Image-scaled epmg9lb0"
      data-testid="customer-satisfaction-2"
      src="test-file-stub"
    />
    <img
      class="css-pal2x8-Image-scaled epmg9lb0"
      data-testid="customer-satisfaction-3"
      src="test-file-stub"
    />
    <img
      class="css-137fro5-Image-scaled-Image epmg9lb0"
      data-testid="customer-satisfaction-4"
      src="test-file-stub"
    />
    <img
      class="css-pal2x8-Image-scaled epmg9lb0"
      data-testid="customer-satisfaction-5"
      src="test-file-stub"
    />
  </div>
</DocumentFragment>
`;

exports[`CustomerSatisfaction should work with parameters 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from, 10%, 40%, 80%, to {
    -webkit-transform: translate3d(0, 0, 0);
    -moz-transform: translate3d(0, 0, 0);
    -ms-transform: translate3d(0, 0, 0);
    transform: translate3d(0, 0, 0);
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  30% {
    -webkit-transform: translate3d(0, 5px, 0);
    -moz-transform: translate3d(0, 5px, 0);
    -ms-transform: translate3d(0, 5px, 0);
    transform: translate3d(0, 5px, 0);
    -webkit-transform: rotate(5deg);
    -moz-transform: rotate(5deg);
    -ms-transform: rotate(5deg);
    transform: rotate(5deg);
  }

  60% {
    -webkit-transform: translate3d(0, -6px, 0);
    -moz-transform: translate3d(0, -6px, 0);
    -ms-transform: translate3d(0, -6px, 0);
    transform: translate3d(0, -6px, 0);
  }

  90% {
    -webkit-transform: translate3d(0, -2px, 0);
    -moz-transform: translate3d(0, -2px, 0);
    -ms-transform: translate3d(0, -2px, 0);
    transform: translate3d(0, -2px, 0);
  }
}

.css-1cjs2t5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-pal2x8-Image-scaled {
  height: 88px;
  width: 88px;
  cursor: pointer;
  -webkit-transition: -webkit-transform 1s cubic-bezier(0.19, 1, 0.22, 1);
  transition: transform 1s cubic-bezier(0.19, 1, 0.22, 1);
}

.css-pal2x8-Image-scaled:hover,
.css-pal2x8-Image-scaled:focus {
  -webkit-transform: scale(1.2);
  -moz-transform: scale(1.2);
  -ms-transform: scale(1.2);
  transform: scale(1.2);
}

.css-137fro5-Image-scaled-Image {
  height: 88px;
  width: 88px;
  cursor: pointer;
  -webkit-transition: -webkit-transform 1s cubic-bezier(0.19, 1, 0.22, 1);
  transition: transform 1s cubic-bezier(0.19, 1, 0.22, 1);
  -webkit-animation: animation-0 1s ease infinite;
  animation: animation-0 1s ease infinite;
}

.css-137fro5-Image-scaled-Image:hover,
.css-137fro5-Image-scaled-Image:focus {
  -webkit-transform: scale(1.2);
  -moz-transform: scale(1.2);
  -ms-transform: scale(1.2);
  transform: scale(1.2);
}

<div
    class="css-1cjs2t5 ehpbis70"
  >
    <img
      class="css-pal2x8-Image-scaled epmg9lb0"
      data-testid="undefined-1"
      src="test-file-stub"
    />
    <img
      class="css-pal2x8-Image-scaled epmg9lb0"
      data-testid="undefined-2"
      src="test-file-stub"
    />
    <img
      class="css-pal2x8-Image-scaled epmg9lb0"
      data-testid="undefined-3"
      src="test-file-stub"
    />
    <img
      class="css-137fro5-Image-scaled-Image epmg9lb0"
      data-testid="undefined-4"
      src="test-file-stub"
    />
    <img
      class="css-pal2x8-Image-scaled epmg9lb0"
      data-testid="undefined-5"
      src="test-file-stub"
    />
  </div>
</DocumentFragment>
`;
